--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
     <div class="container my-5" id = "rectForm" style="display: none;">
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong>You Chose: Rectangle,</strong> Now you can calculate area of a Rectangle! <a href="/">Go Back</a>.
+            <strong>You Chose: Rectangle,</strong> Now you can calculate area of a Rectangle! <a href="https://cdansh13.github.io/JS_AreaCalc">Go Back</a>.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         <div class="mb-3">
@@ -78,7 +78,7 @@
 
     <div class="container my-5" id = "triForm" style="display: none;">
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong>You Chose: Triangle,</strong> Now you can calculate area of a Triangle! <a href="/">Go Back</a>.
+            <strong>You Chose: Triangle,</strong> Now you can calculate area of a Triangle! <a href="https://cdansh13.github.io/JS_AreaCalc">Go Back</a>.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         <div class="mb-3">
@@ -96,7 +96,7 @@
 
     <div class="container my-5" id = "squForm" style="display: none;">
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong>You Chose: Square,</strong> Now you can calculate area of a Square! <a href="/">Go Back</a>.
+            <strong>You Chose: Square,</strong> Now you can calculate area of a Square! <a href="https://cdansh13.github.io/JS_AreaCalc">Go Back</a>.
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
         <div class="mb-3">
